# winvision-macro-web

./: .gitignore  FILE_GUIDE_KO.md  README.md  RUN_GUIDE_KO.md  TEST_CHECKLIST_KO.md  pyproject.toml  requirements.txt  run-cli-windows.bat  run-windows.bat  setup-windows.bat
configs/: default.json
models/: README.md
src/winvision_macro/: __init__.py  __main__.py  actions.py  bootstrap.py  calibration.py  capture.py  config.py  interfaces.py  main.py  preview.py  runtime.py  vision.py  web_control.py
templates/: README.md
tests/: test_config.py  test_macro_runtime.py
